--- a/app.yaml
+++ b/app.yaml
@@ -24,3 +24,7 @@ handlers:
 - url: /
   static_files: public/index.html
   upload: public/index\.html
+
+- url: /comparison
+  static_files: public/comparison.html
+  upload: public/comparison\.html
