add initial know-your-customer form

--- a/app.yaml
+++ b/app.yaml
@@ -28,3 +28,7 @@ handlers:
 - url: /comparison
   static_files: public/comparison.html
   upload: public/comparison\.html
+
+- url: /kyc
+  static_files: public/kyc.html
+  upload: public/kyc\.html
