--- a/app.yaml
+++ b/app.yaml
@@ -5,13 +5,8 @@ api_version: 1
 
 handlers:
 
-- url: /assets/js/alice\.js
-  script: alice.js.php
-
 - url: /assets
   static_dir: public/assets
-
-
 
 - url: /favicon\.ico
   static_files: public/favicon.ico
@@ -25,14 +20,6 @@ handlers:
   static_files: public/index.html
   upload: public/index\.html
 
-- url: /list
-  static_files: public/list.html
-  upload: public/list\.html
-
-- url: /comparison
-  static_files: public/comparison.html
-  upload: public/comparison\.html
-
-- url: /kyc
-  static_files: public/kyc.html
-  upload: public/kyc\.html
+- url: /app
+  static_files: public/app.html
+  upload: public/app\.html
